Events are Working! Taking a break wooohooo

--- a/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
+++ b/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
@@ -173,9 +173,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\egp-mancala\events\ColorEvent.cpp" />
+    <ClCompile Include="..\..\..\source\egp-mancala\events\EventManager.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\Main.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.c" />
-    <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.c" />
+    <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\source\egp-mancala\events\ColorEvent.h" />
