--- a/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj.filters
+++ b/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj.filters
@@ -33,22 +33,22 @@
     <ClCompile Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.c">
       <Filter>Source Files\Mancala</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.c">
-      <Filter>Source Files\Util</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\source\egp-mancala\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\source\egp-mancala\events\ColorEvent.cpp">
       <Filter>Source Files\Events\Event</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\egp-mancala\events\EventManager.cpp">
+      <Filter>Source Files\Events</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.cpp">
+      <Filter>Source Files\Util</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.h">
       <Filter>Source Files\Mancala</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\source\egp-mancala\util\LinkedList.h">
-      <Filter>Source Files\Util</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\source\egp-mancala\events\Event.h">
       <Filter>Source Files\Events</Filter>
@@ -61,6 +61,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\source\egp-mancala\games\GameState.h">
       <Filter>Source Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\source\egp-mancala\util\LinkedList.h">
+      <Filter>Source Files\Util</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
