--- a/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
+++ b/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
@@ -173,13 +173,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\source\egp-mancala\events\ColorEvent.cpp" />
+    <ClCompile Include="..\..\..\source\egp-mancala\events\DamageEvent.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\events\EventManager.cpp" />
+    <ClCompile Include="..\..\..\source\egp-mancala\games\GameState.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\Main.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.c" />
     <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\source\egp-mancala\events\ColorEvent.h" />
+    <ClInclude Include="..\..\..\source\egp-mancala\events\DamageEvent.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\events\Event.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\events\EventManager.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\games\GameState.h" />
