--- a/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj.filters
+++ b/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="..\..\..\source\egp-mancala\util\LinkedList.cpp">
       <Filter>Source Files\Util</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\egp-mancala\events\DamageEvent.cpp">
+      <Filter>Source Files\Events\Event</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\egp-mancala\games\GameState.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.h">
@@ -64,6 +70,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\source\egp-mancala\util\LinkedList.h">
       <Filter>Source Files\Util</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\source\egp-mancala\events\DamageEvent.h">
+      <Filter>Source Files\Events\Event</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
