--- a/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
+++ b/EGP Networking Base FW/project/VS2015/egp-mancala/egp-mancala.vcxproj
@@ -175,6 +175,7 @@
     <ClCompile Include="..\..\..\source\egp-mancala\events\ColorEvent.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\events\DamageEvent.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\events\EventManager.cpp" />
+    <ClCompile Include="..\..\..\source\egp-mancala\events\HealEvent.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\games\GameState.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\Main.cpp" />
     <ClCompile Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.c" />
@@ -186,8 +187,10 @@
     <ClInclude Include="..\..\..\source\egp-mancala\events\DamageEvent.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\events\Event.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\events\EventManager.h" />
+    <ClInclude Include="..\..\..\source\egp-mancala\events\HealEvent.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\games\GameState.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\mancala\MancalaUtils.h" />
+    <ClInclude Include="..\..\..\source\egp-mancala\network\CustomPackets.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\util\LinkedList.h" />
     <ClInclude Include="..\..\..\source\egp-mancala\util\Thread.h" />
   </ItemGroup>
